new server allows to test quaternions as well

--- a/cfg/Tutorials.cfg
+++ b/cfg/Tutorials.cfg
@@ -6,10 +6,17 @@ from dynamic_reconfigure.parameter_generator_catkin import *
 gen = ParameterGenerator()
 
 gen.add("int_param",    int_t,    0, "An Integer parameter", 50,  0, 100)
-gen.add("double_paramr", double_t, 0, "A double parameter",   0, -3.14,   3.14)
-gen.add("double_paramp", double_t, 0, "A double parameter",   0, -3.14,   3.14)
-gen.add("double_paramy", double_t, 0, "A double parameter",   0, -3.14,   3.14)
-gen.add("str_param",    str_t,    0, "A string parameter",  "Hello World")
+gen.add("double_paramr", double_t, 0, "Roll",   0, -3.14,   3.14)
+gen.add("double_paramp", double_t, 0, "Pitch",   0, -3.14,   3.14)
+gen.add("double_paramy", double_t, 0, "Yaw",   0, -3.14,   3.14)
+gen.add("use_q",   bool_t,   0, "Use quat. instead of euler",  True)
+gen.add("double_paramqx", double_t, 0, "q:x",   0, 0,   1)
+gen.add("double_paramqy", double_t, 0, "q:y",   0, 0,   1)
+gen.add("double_paramqz", double_t, 0, "q:z",   0, 0,   1)
+gen.add("double_paramqw", double_t, 0, "q:w",   1, 0,   1)
+gen.add("parent_frame_id",    str_t,    0, "Parent frame id",  "map")
+gen.add("child_frame_id",    str_t,    0, "Child frame id",  "frame_0")
+gen.add("new_frame_id",    str_t,    0, "New frame id",  "frame_1")
 gen.add("bool_paramx",   bool_t,   0, "Invert X",  False)
 gen.add("bool_paramy",   bool_t,   0, "Invert Y",  False)
 gen.add("bool_paramz",   bool_t,   0, "Invert Z",  False)
