--- a/.gitignore
+++ b/.gitignore
@@ -49,3 +49,13 @@ qtcreator-*
 
 # Catkin custom files
 CATKIN_IGNORE
+
+# Latex stuff
+*.aux
+*.bbl
+*.blg
+*.fdb_latexmk
+*.out
+*.run.xml
+*.synctex.gz
+
